Starting the website

--- a/GroupMainPage.html
+++ b/GroupMainPage.html
@@ -6,5 +6,7 @@
 </head>
 
 <body>
+	<h1>The Wednesday on Saturday on Wednesday group website!</h1>
+	<p>This is the website for the Wednesday on Saturday on Wednesday group.</p>
 </body>
 </html>
