--- a/GroupMainPage.html
+++ b/GroupMainPage.html
@@ -5,8 +5,19 @@
 <title>Main</title>
 </head>
 
+
 <body>
-	<h1>The Wednesday on Saturday on Wednesday group website!</h1>
-	<p>This is the website for the Wednesday on Saturday on Wednesday group.</p>
+		
+	<style>
+		.color{
+			color: orange;
+			background-color: black;
+		}	
+	</style>
+		
+	<h1 class="color">The Wednesday on Saturday on Wednesday group website!</h1>
+	<p class="color">This is the website for the Wednesday on Saturday on Wednesday group.</p>
+	
+	<a ><img src="Almonzo Time Magazine.png" alt="Hold Onto Your Butts"></a>
 </body>
 </html>
