--- a/GroupMainPage.html
+++ b/GroupMainPage.html
@@ -61,7 +61,7 @@ Created By:
 		<div class="col-xl-auto dropdownButton">
 			<button class="btn btn-light dropdown-toggle btn-lg align-self-center"	 type="button" id="asdf" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Members</button>
 			<div class="dropdown-menu " aria-labelledby="asdf">
-				<button class="dropdown-item color" href="#">John Kiser</button>
+				<button class="dropdown-item color"><a href="JohnPage.html">John Kiser</a></button>
 				<button class="dropdown-item color" href="#">Chris Dahrens</button>
 				<button class="dropdown-item color" href="#">Matt Marquart</button>
 			</div>
