--- a/JohnPage.html
+++ b/JohnPage.html
@@ -18,10 +18,11 @@
 		background-repeat: no-repeat;
 		
 	}
-	.rotate270 {
+	.resizeImg {
 		width: 300px;
 		height: auto;
 		margin-top: 50px;
+		
 	}
 	.centerImg{
 		display:block;
@@ -34,11 +35,39 @@
 		color:aliceblue;
 		text-align: center;
 	}
+	.bioText{
+		color:aliceblue;
+		text-align: left;
+		width: 25%;
+		word-wrap: break-word;
+		margin-left: 5%;
+		
+	}
+	.skillsText{
+		color:aliceblue;
+		text-align: left;
+		width: 25%;
+		word-wrap: break-word;
+		margin-left: 70%;
+		
+	}
+	
 	
 </style>
 <body>
 	<h1 class = "text">John Kiser</h1>
 	<h2 class = "text">Dicks, Dicks, and more Dicks</h2>
-	<img src = "JohnPicture.jpg" class = "rotate270 centerImg" alt = "Johnny Boi" align = "middle">
+	<h3 class = "bioText" style = "float:left">Bio:</h3>
+	
+	<h3 class = "skillsText">Skills:</h3>
+	
+	
+	<p class = "bioText" style = "float:left"> I studied music for years at the university of Idaho and while studying music education I discovered a fascination with the development of video games and how music plays a part in the gaming experience. This eventually led me to the GIMM program at BSU where I am currently studying game development and design. I am a nerd through and though and spend most of my free time either playing video games or playing dungeons and dragons. I was a founding member of the Dungeons and Broncos club at BSU and enjoy bringing a game I love so much to so many different people.
+	</p>
+		
+	<p class = "skillsText"> I am a classically trained musician and composer. I have taught elementary music and private lessons. I have a basic understanding of a couple coding languages, C# and Action Script. I am an accomplished dungeon master and have taught many people to play many differing tabletop roll playing games.</p>
+	
+	
+	
 </body>
 </html>
