--- a/JohnPage.html
+++ b/JohnPage.html
@@ -1,8 +1,11 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-<meta charset="utf-8">
+	<meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/4.0.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <title>JohnsPage</title>
 </head>
 	
@@ -14,60 +17,67 @@
 		margin:0;
 		padding:0;
 		background-image: url("vinyl.jpg");
-		background-size: 100% 100%;
+		background-size: 100% 5000%;
 		background-repeat: no-repeat;
 		
 	}
-	.resizeImg {
-		width: 300px;
-		height: auto;
-		margin-top: 50px;
-		
+	.bgMargin{
+		margin-bottom: auto;
+		margin-left: -5%;
+		margin-right: -5%;
 	}
-	.centerImg{
+	.resizeImg {
+		width: 100%;
+		height: auto;
 		display:block;
 		margin-left: auto;
-		margin-right: auto;
-		
+		margin-right:auto;
 	}
 	
-	.text {
-		color:aliceblue;
+	.textColor {
 		text-align: center;
-	}
-	.bioText{
-		color:aliceblue;
-		text-align: left;
-		width: 25%;
 		word-wrap: break-word;
-		margin-left: 5%;
+		color:aliceblue;
 		
 	}
-	.skillsText{
-		color:aliceblue;
-		text-align: left;
-		width: 25%;
-		word-wrap: break-word;
-		margin-left: 70%;
-		
+	.positioning{
+		align-content: center;
+		margin-bottom: 50px;
+		margin-top: 50px;
 	}
-	
+
 	
 </style>
 <body>
-	<h1 class = "text">John Kiser</h1>
-	<h2 class = "text">Dicks, Dicks, and more Dicks</h2>
-	<h3 class = "bioText" style = "float:left">Bio:</h3>
 	
-	<h3 class = "skillsText">Skills:</h3>
-	
-	
-	<p class = "bioText" style = "float:left"> I studied music for years at the university of Idaho and while studying music education I discovered a fascination with the development of video games and how music plays a part in the gaming experience. This eventually led me to the GIMM program at BSU where I am currently studying game development and design. I am a nerd through and though and spend most of my free time either playing video games or playing dungeons and dragons. I was a founding member of the Dungeons and Broncos club at BSU and enjoy bringing a game I love so much to so many different people.
-	</p>
+	<div class="container-fluid textColor">
+  	<h1 class = "bgMargin" style = "background-color: black">John Kiser</h1>
+	<h2 class = "bgMargin" style = "background-color: black">Hello, I am Gay.</h2>
+		<br>
+	<h3><button><a href="GroupMainPage.html">Home</a></button></h3>
+  	<div class="row">
+   		 <div class="col-xs-5 col-sm-5">
+			 <h3>Bio:</h3>
+			 <p>
+                I studied music for years at the university of Idaho and while studying music education I discovered a fascination with the development of video games and how music plays a part in the gaming experience. This eventually led me to the GIMM program at BSU where I am currently studying game development and design. I am a nerd through and though and spend most of my free time either playing video games or playing dungeons and dragons. I was a founding member of the Dungeons and Broncos club at BSU and enjoy bringing a game I love so much to so many different people.
+			</p> 
+		</div>
 		
-	<p class = "skillsText"> I am a classically trained musician and composer. I have taught elementary music and private lessons. I have a basic understanding of a couple coding languages, C# and Action Script. I am an accomplished dungeon master and have taught many people to play many differing tabletop roll playing games.</p>
-	
-	
-	
+    	<div class="col-xs-2 col-sm-2" style="background-color:lavender;">
+			<img src="JohnPicture.jpg" class="resizeImg" alt="Johnny Boi">
+		</div>
+		
+    	<div class="col-xs-5 col-sm-5">
+			<h3>Skills:</h3>
+			<p>
+                    I am a classically trained musician and composer. I have taught elementary music and private lessons. I have a basic understanding of a couple coding languages, C# and Action Script. I am an accomplished dungeon master and have taught many people to play many differing tabletop roll playing games.
+				<br>
+				<br>
+				<b>Here is a playlist of some gameboy style chip tunes.</b>
+        	</p>
+			<iframe width="75%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/207716434&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe>
+		</div>
+ 	 </div>		
+	</div>
 </body>
 </html>
