--- a/GroupMainPage.html
+++ b/GroupMainPage.html
@@ -12,14 +12,11 @@
 		.color{
 			color: orange;
 			background-color: black;
-		}
-		.font {
-			font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", "Arial Black", "sans-serif";
-		}
+		}	
 	</style>
 		
-	<h1 class="color font">The Wednesday on Saturday on Wednesday group website!</h1>
-	<p class="color font">This is the website for the Wednesday on Saturday on Wednesday group.</p>
+	<h1 class="color">The Wednesday on Saturday on Wednesday group website!</h1>
+	<p class="color">This is the website for the Wednesday on Saturday on Wednesday group.</p>
 	
 	<a ><img src="Almonzo Time Magazine.png" alt="Hold Onto Your Butts"></a>
 </body>
