Added more to my page

--- a/JohnPage.html
+++ b/JohnPage.html
@@ -32,6 +32,16 @@
 		display:block;
 		margin-left: auto;
 		margin-right:auto;
+		margin-top:50%;
+		margin-bottom:50%;
+	}
+	
+	.resizeImg2 {
+		width: 50%;
+		height: auto;
+		display:block;
+		margin-left: auto;
+		margin-right:auto;
 	}
 	
 	.textColor {
@@ -61,6 +71,9 @@
 			 <p>
                 I studied music for years at the university of Idaho and while studying music education I discovered a fascination with the development of video games and how music plays a part in the gaming experience. This eventually led me to the GIMM program at BSU where I am currently studying game development and design. I am a nerd through and though and spend most of my free time either playing video games or playing dungeons and dragons. I was a founding member of the Dungeons and Broncos club at BSU and enjoy bringing a game I love so much to so many different people.
 			</p> 
+			 <br>
+			 
+			 <h5>Check out some games I have helped make here.<br><a href = "https://play.google.com/store/search?q=sineglitch&c=apps"><img src="SineGlitch.png" class = "resizeImg2" alt = "SineGlitch Logo"></a></h5>
 		</div>
 		
     	<div class="col-xs-2 col-sm-2" style="background-color:lavender;">
@@ -75,7 +88,7 @@
 				<br>
 				<b>Here is a playlist of some gameboy style chip tunes.</b>
         	</p>
-			<iframe width="75%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/207716434&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe>
+			<iframe width="75%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/207716434&amp;color=%23ff5500&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true">Where does this show up?</iframe>
 		</div>
  	 </div>		
 	</div>
