--- a/JohnPage.html
+++ b/JohnPage.html
@@ -22,9 +22,9 @@
 		
 	}
 	.bgMargin{
-		margin-bottom: auto;
 		margin-left: -5%;
 		margin-right: -5%;
+		padding: 25px;
 	}
 	.resizeImg {
 		width: 100%;
@@ -34,6 +34,7 @@
 		margin-right:auto;
 		margin-top:50%;
 		margin-bottom:50%;
+		border-radius: 25px;
 	}
 	
 	.resizeImg2 {
@@ -42,6 +43,7 @@
 		display:block;
 		margin-left: auto;
 		margin-right:auto;
+		border-radius: 20px;
 	}
 	
 	.textColor {
@@ -61,13 +63,13 @@
 <body>
 	
 	<div class="container-fluid textColor">
-  	<h1 class = "bgMargin" style = "background-color: black">John Kiser</h1>
-	<h2 class = "bgMargin" style = "background-color: black">Hello, I am Gay.</h2>
+  	<h1 class = "bgMargin" style = "background-color: black">John Kiser<br>Hello, I am Gay.</h1>
+	
 		<br>
-	<h3><button><a href="GroupMainPage.html">Home</a></button></h3>
+	<h2><button><a href="GroupMainPage.html">Home</a></button></h2>
   	<div class="row">
    		 <div class="col-xs-5 col-sm-5">
-			 <h3>Bio:</h3>
+			 <h2>Bio:</h2>
 			 <p>
                 I studied music for years at the university of Idaho and while studying music education I discovered a fascination with the development of video games and how music plays a part in the gaming experience. This eventually led me to the GIMM program at BSU where I am currently studying game development and design. I am a nerd through and though and spend most of my free time either playing video games or playing dungeons and dragons. I was a founding member of the Dungeons and Broncos club at BSU and enjoy bringing a game I love so much to so many different people.
 			</p> 
@@ -81,7 +83,7 @@
 		</div>
 		
     	<div class="col-xs-5 col-sm-5">
-			<h3>Skills:</h3>
+			<h2>Skills:</h2>
 			<p>
                     I am a classically trained musician and composer. I have taught elementary music and private lessons. I have a basic understanding of a couple coding languages, C# and Action Script. I am an accomplished dungeon master and have taught many people to play many differing tabletop roll playing games.
 				<br>
