--- a/GroupMainPage.html
+++ b/GroupMainPage.html
@@ -15,7 +15,7 @@ Created By:
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 <meta charset="utf-8">
 <title>Main Page</title>
-<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
 <link href="CssStyles.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" type="text/css" href="CssStyles.css">
 </head>
@@ -31,11 +31,8 @@ Created By:
 			<div class="dropdown-menu " aria-labelledby="asdf">
 				<button class="dropdown-item color"><a href="JohnPage.html">John Kiser</a></button>
 				<button class="dropdown-item color"><a href="chrisPage.html">Chris Dahrens</a></button>
-<<<<<<< HEAD
-				<button class="dropdown-item color"><a href="Matt'sPage.html">Matt Marquart</button>
-=======
 				<button class="dropdown-item color"><a href="Matt'sPage.html">Matt Marquart</a></button>
->>>>>>> origin/New-Branch
+
 			</div>
 		</div>
 		
@@ -49,17 +46,16 @@ Created By:
 	<!-- Subtitle -->
 	<p class="color greyBox subtitle"><i>The <b>Official</b> Website for the Wednesday on Saturday on Wednesday Group.</i></p>
 	
-	<p> </p>
+
 	
-	<img src="Almonzo Time Magazine.png" class="centerPicture" alt="Hold Onto Your Butts" style="text-">
+	<img src="images/Almonzo Time Magazine.png" class="centerPicture" alt="Hold Onto Your Butts" style="padding: 10px 10px 10px 10px;">
 	
-	<p> </p>
 	
 	
 	<div class="row">
 		<div class="col-xl-8 greyBox"></div>
 		<div class="col-xl-4 greyBox">
-			<p> </p>
+
 			<p><i>©Wednesday on Saturday on Wednesday Group 2018</i></p>
 		</div>
 	</div>
