--- a/Matt'sPage.html
+++ b/Matt'sPage.html
@@ -7,7 +7,7 @@
 <div>
 	<button  class="homebutton"><a href="GroupMainPage.html">Return Home</a></button>
 	</div>
-<div class="row" class="everything">
+<div class="row">
 <div class="column">
 <body>
 <div class="modalbox" id="text">
@@ -52,7 +52,7 @@
     <a class="close" href="#">X</a>
     <p class="title">Gallery</p>
     <div class="content">
-      <img class="imageresize" src="mattpic.png" alt="Hey how ya doin">
+      <img class="imageresize" src="images/mattpic.png" alt="Hey how ya doin">
 		<p>And more images to come.</p>
     </div>
   </div>
