--- a/JohnPage.html
+++ b/JohnPage.html
@@ -16,7 +16,7 @@
 		max-height: 100%;
 		margin:0;
 		padding:0;
-		background-image: url("vinyl.jpg");
+		background-image: url("images/vinyl.jpg");
 		background-size: 100% 5000%;
 		background-repeat: no-repeat;
 		
@@ -75,11 +75,11 @@
 			</p> 
 			 <br>
 			 
-			 <h5>Check out some games I have helped make here.<br><a href = "https://play.google.com/store/search?q=sineglitch&c=apps"><img src="SineGlitch.png" class = "resizeImg2" alt = "SineGlitch Logo"></a></h5>
+			 <h5>Check out some games I have helped make here.<br><a href = "https://play.google.com/store/search?q=sineglitch&c=apps"><img src="images/SineGlitch.png" class = "resizeImg2" alt = "SineGlitch Logo"></a></h5>
 		</div>
 		
     	<div class="col-xs-2 col-sm-2" style="background-color:lavender;">
-			<img src="JohnPicture.jpg" class="resizeImg" alt="Johnny Boi">
+			<img src="images/JohnPicture.jpg" class="resizeImg" alt="Johnny Boi">
 		</div>
 		
     	<div class="col-xs-5 col-sm-5">
