--- a/Matt'sPage.html
+++ b/Matt'sPage.html
@@ -7,7 +7,7 @@
 <div>
 	<button  class="homebutton"><a href="GroupMainPage.html">Return Home</a></button>
 	</div>
-<div class="row" class="everything">
+<div class="row">
 <div class="column">
 <body>
 <div class="modalbox" id="text">
@@ -37,6 +37,8 @@
 			<li>Creative and Technical Writing</li>
 			<li>Philosophy</li>
 			<li>Cooking</li>
+			<li>h</li>
+			<li>The h you see above is not a mistake or typo; rather it is a subtle commentary on the nature of modern surreal humor</li>
 		</ul>
     </div>
   </div>
