john page edits

--- a/JohnPage.html
+++ b/JohnPage.html
@@ -16,7 +16,7 @@
 		max-height: 100%;
 		margin:0;
 		padding:0;
-		background-image: url("vinyl.jpg");
+		background-image: url("Images/vinyl.jpg");
 		background-size: 100% 5000%;
 		background-repeat: no-repeat;
 		
@@ -35,6 +35,8 @@
 		margin-top:50%;
 		margin-bottom:50%;
 		border-radius: 25px;
+		border-width: 5px;
+		border-color: lavender;
 	}
 	
 	.resizeImg2 {
@@ -63,7 +65,7 @@
 <body>
 	
 	<div class="container-fluid textColor">
-  	<h1 class = "bgMargin" style = "background-color: black">John Kiser<br>Hello, I am Gay.</h1>
+  	<h1 class = "bgMargin" style = "background-color: black">John Kiser<br>Hello and welcome!</h1>
 	
 		<br>
 	<h2><button><a href="GroupMainPage.html">Home</a></button></h2>
@@ -75,11 +77,11 @@
 			</p> 
 			 <br>
 			 
-			 <h5>Check out some games I have helped make here.<br><a href = "https://play.google.com/store/search?q=sineglitch&c=apps"><img src="SineGlitch.png" class = "resizeImg2" alt = "SineGlitch Logo"></a></h5>
+			 <h5>Check out some games I have helped make here.<br><a href = "https://play.google.com/store/search?q=sineglitch&c=apps"><img src="Images/SineGlitch.png" class = "resizeImg2" alt = "SineGlitch Logo"></a></h5>
 		</div>
 		
-    	<div class="col-xs-2 col-sm-2" style="background-color:lavender;">
-			<img src="JohnPicture.jpg" class="resizeImg" alt="Johnny Boi">
+    	<div class="col-xs-2 col-sm-2">
+			<img src="Images/JohnPicture.jpg" class="resizeImg" alt="Johnny Boi">
 		</div>
 		
     	<div class="col-xs-5 col-sm-5">
@@ -90,7 +92,7 @@
 				<br>
 				<b>Here is a playlist of some gameboy style chip tunes.</b>
         	</p>
-			<iframe width="75%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/207716434&amp;color=%23ff5500&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true">Where does this show up?</iframe>
+			<iframe width="75%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/207716434&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true">Where does this show up?</iframe>
 		</div>
  	 </div>		
 	</div>
