--- a/chrisPage.html
+++ b/chrisPage.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<meta charset="utf-8">
 	<title>Chris Dahrens</title>
-	<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+	<link rel="icon" type="image/png" href="Images/favicon-32x32.png" sizes="32x32" />
 </head>
 
 <style>
@@ -56,7 +56,7 @@
 				<!-- This is the end of the bio -->
 				
 				<br>
-				<a href="https://downloadmoreram.com/"><img src="boise ad.PNG" alt="Gizoogle Ad Services" href="google.com" width="100%"></a>
+				<a href="https://downloadmoreram.com/"><img src="Images/boise ad.PNG" alt="Gizoogle Ad Services" href="google.com" width="100%"></a>
 				<br>
 				<br>
 				<p align="right"><i>©Christopher Dahrens and the Wednesday on Saturday on Wednesday Group 2018</i></p>
@@ -67,7 +67,7 @@
 					<br>
 					<br>
 					<br>
-					<h2>Skills -- <img src="ChrisPicture.png" style="float:right" width="45%" height="45%" class="imageBorder"></h2>
+					<h2>Skills -- <img src="Images/ChrisPicture.png" style="float:right" width="45%" height="45%" class="imageBorder"></h2>
 					<ul>
 						<li>Programming</li>
 						<li>Art?</li>
@@ -89,7 +89,7 @@
 					</div>
 			</div>
 			<div class="col-2 topRow">
-				<a href="GroupMainPage.html"><img class = "timemonzo" src="Almonzo Time Magazine.png"alt="Time Almonzo" style = "text-align: right">Home</a>				
+				<a href="GroupMainPage.html"><img class = "timemonzo" src="Images/Almonzo Time Magazine.png"alt="Time Almonzo" style = "text-align: right">Home</a>				
 			</div>
 		</div>
 	</div>
