--- a/GroupMainPage.html
+++ b/GroupMainPage.html
@@ -15,7 +15,7 @@ Created By:
 
 <meta charset="utf-8">
 <title>Main Page</title>
-<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="Images/favicon-32x32.png" sizes="32x32" />
 <link href="CssStyles.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" type="text/css" href="CssStyles.css">
 </head>
@@ -24,6 +24,7 @@ Created By:
 
 <body>
 	
+	<?php include 'Navbar.php'; ?>
 	
 	<div class="container-fluid row greyBox">  <!-- Header -->
 		<!-- Title -->
@@ -38,7 +39,7 @@ Created By:
 	
 	<p> </p>
 	
-	<img src="Almonzo Time Magazine.png" class="centerPicture" alt="Hold Onto Your Butts" style="text-">
+	<img src="Images/Almonzo Time Magazine.png" class="centerPicture" alt="Hold Onto Your Butts" style="text-">
 	
 	<p> </p>
 	
