--- a/appPage.html
+++ b/appPage.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="appStyle.css">
 	<meta charset="UTF-8">
 	<title>Group App</title>
 </head>
@@ -22,15 +23,23 @@
 	<div class="container-fluid">
 		<div class="row h-100">
 			<div class="col-xl-2">  <!-- game description column -->
+				<div class="gamedes">
+					<h5 align="left">Game Description</h5>
 				<p>Boss Battle is a Card Game playable on most Android devices, where you collect humorous monsters and spells of various themes, and use them to battle other players online.</p>
+					</div>
 			</div>
-			<div class="col-xl-8">  <!-- rules & example cards column -->
+			<div class="col-xl-8 ruledes">  <!-- rules & example cards column -->
 				<h4 align="center"><i>Rules & Regulations</i></h4><br>
 				<p>The rules for Boss Battle are still work in progress, but put most simply each player has a consummable amount of mana they can use to cast various monsters and spells.  Only monsters in the 'Boss Zone' can use the effects printed on their card, all other monsters can only attack or defend.  When the player takes a certain amount of damage, they lose the game!</p>
+				<div class-"imageboi">
+					<p align="center"><a href=""><img src="images/wambam_the_trashcan_man.png" width="20%" height="20%"></a>
+						<a href=""><img src="images/gently_used_pizza.png" width="20%" height="20%"></a></p> </div>
 			</div>
 			<div class="col-xl-2">  <!-- link to finished game column -->
+				<div class="linkboi">
 				<p align="center">Link to download <a href="">here</a></p>
 				<p align="center"><a href=""><img src="images/Almonzo Time Magazine.png" width="40%" height="60%"></a></p>
+		</div>
 			</div>
 		</div>
 	</div>
